admission/ValidatingAdmissionPolicy/policies/no-admin-ports/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: violating-no-admin-ports
  namespace: policy-test
spec:
  type: LoadBalancer
  selector:
    app: test
  ports:
  - name: admin
    port: 8080
    targetPort: 8080
