admission/ValidatingAdmissionPolicy/policies/no-admin-ports/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-no-admin-ports-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: service-no-admin-ports
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-service-no-admin-ports.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-no-admin-ports-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-no-admin-ports
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-no-admin-ports.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-no-admin-ports-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-no-admin-ports
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-service-no-admin-ports.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-no-admin-ports-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-no-admin-ports
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-no-admin-ports.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-no-admin-ports-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-no-admin-ports
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-service-no-admin-ports.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: service-no-admin-ports-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: service-no-admin-ports
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-service-no-admin-ports.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
