admission/ValidatingAdmissionPolicy/policies/no-admin-ports/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: service-no-admin-ports
  annotations:
    security.kubeapt.io/displayName: 'No Admin Ports'
    security.kubeapt.io/description: Externally reachable Services (type LoadBalancer/NodePort) must not expose admin/debug/metrics
    security.kubeapt.io/resource: Services
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: "Remove admin/debug/metrics ports from external Services or split into an internal Service. Fields: spec.type, spec.ports[].name."
    policies.kolteq.com/validatingAdmissionPolicy: 2f913b3b-1da0-5d39-b5fb-393a6cb0ed66
  labels:
    check-service-no-admin-ports.security.kolteq.com/audit: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/enforce: 'false-true'
    check-service-no-admin-ports.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - services
  validations:
  - expression: |
      !(
        (object.spec.type == 'LoadBalancer' || object.spec.type == 'NodePort')
        &&
        object.spec.ports.exists(p,
          has(p.name) &&
          p.name.matches('(?i).*(admin|debug|metrics|mgmt|management).*')
        )
      )
    message: Externally reachable Services (type LoadBalancer/NodePort) must not expose admin/debug/metrics ports. Split these
      endpoints into a separate internal-only Service.
